errors found by klocwork inforce